--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             -webkit-tap-highlight-color: transparent;
         }
         #game {
-            display: block;
             text-align: center;
             background: rgba(120, 120, 120, 0.9);
             padding: 20px;
@@ -30,33 +29,29 @@
             width: 100%;
             max-width: 400px;
         }
-        h2 {
-            margin-bottom: 20px;
-        }
         #burger {
             width: 50vw;
             height: 50vw;
-            max-width: 400px;
+            max-width: 300px;
             background-image: url('whoppe.png');
             background-size: cover;
-            margin: 30px;
             cursor: pointer;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+            border-radius: 50%;
+            margin: 20px auto;
             position: relative;
         }
         #stats {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
             width: 100%;
-            max-width: 600px;
-            margin-top: 20px;
+            max-width: 400px;
+            margin: 10px 0;
             color: #333;
             font-weight: bold;
         }
         #energy-bar-container {
             width: 100%;
-            max-width: 600px;
+            max-width: 400px;
             margin-top: 20px;
             text-align: center;
             position: relative;
@@ -109,7 +104,7 @@
             font-size: 12px;
             transform: translate(-50%, -50%);
             pointer-events: none;
-            z-index: 1000; /* Ensure hitmarker is above other elements */
+            z-index: 1000;
         }
         .tab-container {
             display: flex;
@@ -132,6 +127,29 @@
         .upgrade-section.active {
             display: block;
         }
+        .upgrade-button {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px;
+            margin: 10px 0;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            width: 100%;
+            max-width: 350px;
+            font-size: 16px;
+        }
+        .upgrade-button:hover {
+            background-color: #45a049;
+        }
+        .upgrade-button span.icon {
+            font-size: 24px;
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -141,7 +159,7 @@
             <div id="level">Уровень: 1</div>
         </div>
 
-        <div id="burger" onclick="tapCircle()"></div>
+        <div id="burger" onclick="tapBurger()"></div>
 
         <div id="energy-bar-container">
             <div id="energy-bar">
@@ -157,8 +175,12 @@
 
         <div id="upgrade-screen" class="upgrade-section">
             <h2>Прокачка</h2>
-            <button class="button" id="upgrade-energy">Увеличить макс. энергию (Стоимость: 50)</button>
-            <button class="button" id="upgrade-clicks">Увеличить клики за тап (Стоимость: 50)</button>
+            <button class="upgrade-button" id="upgrade-energy">
+                <span class="icon">⚡</span> Увеличить макс. энергию (Стоимость: <span id="energy-cost">50</span>)
+            </button>
+            <button class="upgrade-button" id="upgrade-clicks">
+                <span class="icon">🖱️</span> Увеличить клики за тап (Стоимость: <span id="click-cost">50</span>)
+            </button>
         </div>
 
         <div class="tab-container">
@@ -215,17 +237,8 @@
             score.innerText = `Клики: ${taps}`;
             levelDisplay.innerText = `Уровень: ${level}`;
             energyBar.style.width = `${(energy / maxEnergy) * 100}%`;
-            energyText.innerText = `Энергия: ${energy}`;
+            energyText.innerText = `Энергия: ${Math.floor(energy)}`;
             maxEnergyText.innerText = `Макс: ${maxEnergy}`;
-            upgradeEnergyButton.innerText = `Увеличить макс. энергию (Стоимость: ${upgradeEnergyCost})`;
-            upgradeClicksButton.innerText = `Увеличить клики за тап (Стоимость: ${upgradeClicksCost})`;
-        };
-
-        const levelUp = () => {
-            if (taps >= level * 10) { // Увеличиваем уровень при достижении определенного количества кликов
-                level++;
-                updateStats();
-            }
         };
 
         const restoreEnergy = () => {
@@ -243,80 +256,18 @@
             saveToFirestore(); // Сохраняем данные в Firestore
         };
 
-        const tapCircle = () => {
+        const tapBurger = () => {
             if (energy > 0) {
                 const energyCost = pointsPerClick; // Расход энергии равен количеству полученных кликов
                 if (energy >= energyCost) {
                     taps += pointsPerClick;
                     energy -= energyCost; // Уменьшаем энергию
-                    levelUp();
-                    showHitMarker(pointsPerClick); // Отображаем хитмаркер с количеством кликов
-                    updateStats(); // Обновляем статистику
+                    updateStats(); // Обновляем интерфейс
                 }
             }
         };
 
-        const showHitMarker = (points) => {
-            const hitMarker = document.createElement('div');
-            hitMarker.className = 'hitmarker';
-            hitMarker.innerText = `+${points}`;
-            hitMarker.style.left = `${Math.random() * 100}%`;
-            hitMarker.style.top = `${Math.random() * 100}%`;
-            document.body.appendChild(hitMarker);
-            setTimeout(() => hitMarker.remove(), 1000);
-        };
-
-        const saveToFirestore = async () => {
-            if (!userId) return;
-            try {
-                await setDoc(doc(db, 'users', userId.toString()), {
-                    taps,
-                    level,
-                    energy,
-                    maxEnergy,
-                    pointsPerClick,
-                    upgradeEnergyCost,
-                    upgradeClicksCost,
-                    lastEnergyUpdate,
-                });
-            } catch (error) {
-                console.error('Ошибка при сохранении данных:', error);
-            }
-        };
-
-        const loadFromFirestore = async () => {
-            if (!userId) return;
-            try {
-                const docRef = doc(db, 'users', userId.toString());
-                const docSnap = await getDoc(docRef);
-                if (docSnap.exists()) {
-                    const data = docSnap.data();
-                    taps = data.taps || 0;
-                    level = data.level || 1;
-                    energy = data.energy || 3000;
-                    maxEnergy = data.maxEnergy || 3000;
-                    pointsPerClick = data.pointsPerClick || 1;
-                    upgradeEnergyCost = data.upgradeEnergyCost || 50;
-                    upgradeClicksCost = data.upgradeClicksCost || 50;
-                    lastEnergyUpdate = data.lastEnergyUpdate || Date.now();
-
-                    // Восстановление энергии на основе времени, проведенного вне игры
-                    const currentTime = Date.now();
-                    const timeDiff = Math.floor((currentTime - lastEnergyUpdate) / 1000);
-                    const energyGain = Math.min(maxEnergy - energy, pointsPerClick * timeDiff);
-                    energy += energyGain;
-
-                    updateStats(); // Обновляем статистику
-                    saveToFirestore(); // Сохраняем данные в Firestore
-                } else {
-                    console.log('Нет такого документа!');
-                }
-            } catch (error) {
-                console.error('Ошибка при загрузке данных:', error);
-            }
-        };
-
-        // Переключение между вкладками
+        // Переключение вкладок
         homeTab.addEventListener('click', () => {
             mainScreen.classList.add('active');
             upgradeScreen.classList.remove('active');
@@ -327,11 +278,12 @@
             mainScreen.classList.remove('active');
         });
 
+        // Обработчики для улучшений
         upgradeEnergyButton.addEventListener('click', () => {
             if (taps >= upgradeEnergyCost) {
                 taps -= upgradeEnergyCost;
-                maxEnergy += 500; // Увеличиваем максимальную энергию
-                upgradeEnergyCost *= 2; // Увеличиваем стоимость улучшения
+                maxEnergy += 100;
+                upgradeEnergyCost += 20; // Увеличиваем стоимость
                 updateStats();
             }
         });
@@ -339,14 +291,49 @@
         upgradeClicksButton.addEventListener('click', () => {
             if (taps >= upgradeClicksCost) {
                 taps -= upgradeClicksCost;
-                pointsPerClick += 1; // Увеличиваем клики за тап
-                upgradeClicksCost *= 2; // Увеличиваем стоимость улучшения
+                pointsPerClick += 1;
+                upgradeClicksCost += 20; // Увеличиваем стоимость
                 updateStats();
             }
         });
 
+        // Функция сохранения в Firestore
+        const saveToFirestore = async () => {
+            try {
+                await setDoc(doc(db, "users", userId), {
+                    taps,
+                    level,
+                    energy,
+                    maxEnergy,
+                    pointsPerClick,
+                    upgradeEnergyCost,
+                    upgradeClicksCost,
+                    lastEnergyUpdate
+                });
+            } catch (error) {
+                console.error("Ошибка сохранения данных:", error);
+            }
+        };
+
+        // Восстановление данных из Firestore
+        const loadFromFirestore = async () => {
+            const userDoc = await getDoc(doc(db, "users", userId));
+            if (userDoc.exists()) {
+                const data = userDoc.data();
+                taps = data.taps;
+                level = data.level;
+                energy = data.energy;
+                maxEnergy = data.maxEnergy;
+                pointsPerClick = data.pointsPerClick;
+                upgradeEnergyCost = data.upgradeEnergyCost;
+                upgradeClicksCost = data.upgradeClicksCost;
+                lastEnergyUpdate = data.lastEnergyUpdate;
+                restoreEnergy(); // Восстановление энергии на основе времени
+                updateStats();
+            }
+        };
+
         loadFromFirestore();
-        setInterval(restoreEnergy, 1000); // Восстановление энергии каждую секунду
     </script>
 </body>
 </html>
